--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,6 @@
   width: 100%;
   height: 100vh;
   position: relative;
-  // overflow: hidden;
   display: flex;
   .background {
     position: absolute;
@@ -10,15 +9,11 @@
     left: 0;
     right: 0;
     bottom: 0;
-    // background-image: linear-gradient(to right,rgb(23,15,35,0.7), 
-    // rgba(142,28,135,0.5)), url("https://tophinhanhdep.com/wp-content/uploads/2021/10/Alan-Walker-Wallpapers.jpg");
-    // background-image: url('https://coolhdwall.com/storage/2212/blackpink--jennie--hd-wallpaper-1920x1080-724.jpg');
-    // background-image: url('https://th.bing.com/th/id/R.5d5d0c931ace2a1b133db2d4add1d8fd?rik=d75tHvOrr3%2ff6A&pid=ImgRaw&r=0');
+   
+    // background-size: 100% 100%;
+    background-size: cover;
     // background-repeat: no-repeat;
-    // background-size: contain;
-    background-size: 100% 100%;
-    // background-repeat: no-repeat;
-    // filter: grayscale(100);
+    object-fit: cover;
     z-index: -1;
   }
 }
